--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
                       </div>
                 </div>
               </nav>
+              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://via.placeholder.com/1000x300.png?text=The+wizard" class="d-block w-100" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://via.placeholder.com/1000x300.png?text=Hobbit+X3" class="d-block w-100" alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://via.placeholder.com/1000x300.png?text=Yummy+Dwarf" class="d-block w-100" alt="">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
         </content>
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
